2013-10-05  Paul Smith  <psmith@gnu.org>

	* scripts/features/loadapi: Use new calling signatures.  Verify
	the NOEXPAND flag works.  Test with all valid function name
	characters.

2013-09-29  Paul Smith  <psmith@gnu.org>

	* scripts/variables/SHELL: Solaris /bin/sh can't handle options in
	multiple words; skip that test.
	* scripts/targets/ONESHELL: Ditto.

	* scripts/variables/GNUMAKEFLAGS: Verify that GNUMAKEFLAGS is
	cleared and options are not duplicated.

2013-09-23  Paul Smith  <psmith@gnu.org>

	* scripts/options/print-directory: Rename dash-w to
	print-directory to avoid conflicts with dash-W on case-insensitive
	filesystems.

2013-09-22  Paul Smith  <psmith@gnu.org>

	* scripts/features/se_implicit: Verify that order-only tokens
	inside second expansion are parsed correctly.
	Test for Savannah bug #31155.

	* run_make_tests.pl (set_more_defaults): If we can't find
	gnumake.h based on the make program we might be running from a
	remote build directory.  Parse the Makefile for the right path.

	Fix some test issues on Solaris.

	* scripts/features/archives: Determine what output ar gives when
	adding and replacing objects and compare with that.
	* scripts/features/escape: Solaris /bin/sh doesn't properly handle
	backslashes inside single quotes, so don't rely on it.
	* scripts/features/output-sync: false(1) gives different exit
	codes on different systems; use "exit 1" instead.
	* scripts/features/parallelism: Increase the timeout for slower systems.

2013-09-21  Paul Smith  <psmith@gnu.org>

	* scripts/features/archives: Some versions of ar (MacOSX) generate
	different output when creating archives.  Run it and verify the
	real output.
	* scripts/features/default_names: MacOSX is, like Windows,
	case-preserving / case-insensitive.  Redo the test to avoid
	checking for "UNIX".
	* test_driver.pl (attach_default_output): Don't dup stdout into
	stderr.  Reported by Denis Excoffier <bug-tar@Denis-Excoffier.org>
